<resources>
    <string name="app_name">LVN Store</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="category">Category</string>
    <string name="filter">Filter</string>
    <string name="from_rating">App with rate from</string>
    <string name="from_year">From Release year</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="language">Language</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- Title detail app -->
    <string name="text_screenshot_detail">ScreenShots</string>
    <string name="text_description_detail">Description</string>
    <string name="text_what_is_new_detail">What is new</string>
    <string name="text_support_detail">Support</string>
    <string name="text_video_detail">Video</string>
    <!---->

    <!-- Sign Up -->
    <string name="text_fullname">Fullname</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_gender">Gender</string>
    <string name="text_gender_male">Male</string>
    <string name="text_gender_female">Female</string>
    <string name="sign_up">Sign Up</string>
    <!---->

    <!-- category fragment -->
    <string name="top_free">Top Free</string>
    <string name="top_paid">Top Paid</string>
    <string name="movers_shaker">Movers Shaker</string>
    <string name="top_grossing">Top Grossing</string>
    <!---->

    <!-- Tab -->
    <string name="tab_app">Apps</string>
    <string name="tab_favourite">Favourite</string>
    <string name="tab_setting">Setting</string>
    <string name="tab_about">About</string>
    <!---->


    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="pref_key_category">pref_category</string>
    <string name="pref_key_rating">pref_rating</string>
    <string name="pref_key_release_year">pref_release_year</string>
    <string name="pref_key_sort">pref_sort</string>
    <string name="pref_key_language">pref_language</string>
    <string name="pref_key_category_show">pref_category_show</string>


    <string name="pref_category_filter">Filter</string>
    <string name="pref_title_category">Category</string>
    <string name="pref_title_category_show">Category Show</string>

    <string name="pref_title_rating">App with rate from</string>
    <string name="pref_default_rating">3</string>

    <string name="pref_title_release_year">From Release year</string>
    <string name="pref_default_release_year">2012</string>

    <string name="pref_title_sort">Sort By</string>
    <string name="pref_default_sort">Release</string>
    <string name="pref_category_sort">Sort</string>

    <string name="pref_title_language">Language</string>
    <string name="pref_default_language">Vietnamese</string>
    <string name="language_english">English</string>

    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <string name="list">List</string>
    <string name="grid">Grid</string>

    <string name="text_price">Free</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
</resources>
