<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activities.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">
            <RadioGroup
                android:id="@+id/rdgCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp">

                <RadioButton
                    android:id="@+id/rbTopFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:text="@string/top_free"/>

                <RadioButton
                    android:id="@+id/rbtopPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:text="@string/top_paid"/>
                <RadioButton
                    android:id="@+id/rbMoverShaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:text="@string/movers_shaker"/>

                <RadioButton
                    android:id="@+id/rbTopGrossing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_grossing"/>

            </RadioGroup>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/cancel_category"
                    android:text="No"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/yes_category"
                    android:layout_marginRight="30dp"/>
                <TextView
                    android:id="@+id/yes_category"
                    android:text="Yes"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="right"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>