<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
        <LinearLayout
            android:id="@+id/llinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_above="@+id/btn_next"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ip_username"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColorHint="@color/color_app">

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_fullname"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:theme="@style/Theme.App.Base.loginNew">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ip_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColorHint="@color/color_app">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:theme="@style/Theme.App.Base.loginNew"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ip_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColorHint="@color/color_app">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:theme="@style/Theme.App.Base.loginNew"/>
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="10dp"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_gender"
                    android:paddingLeft="5dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/color_app"/>
                <training.fpt.nhutlv.lvnstore.utils.segmented.SegmentedGroup
                    android:id="@+id/segmented_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true"
                    segmentedgroup:sc_border_width="1dp"
                    segmentedgroup:sc_corner_radius="5dp"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    segmentedgroup:sc_tint_color="@color/color_app">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_gender_male"
                        style="@style/RadioButton"/>

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_gender_female"
                        style="@style/RadioButton"/>
                </training.fpt.nhutlv.lvnstore.utils.segmented.SegmentedGroup>
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_next"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/sign_up"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:background="@drawable/border_button"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
    </RelativeLayout>
</LinearLayout>